PAPF-3 Basic structure